# privacy_ai_assistant

./: .gitignore  =5.9.0  ALL_7_STAGES_COMPLETION_SUMMARY.md  AUDIO_FIXES_SUMMARY.md  CHAT_UI_FIXES_SUMMARY.md  COMPREHENSIVE_IMPLEMENTATION_SUMMARY.md  COMPREHENSIVE_TEST_REPORT.md  FIXES_APPLIED.md  FIXES_SUMMARY.md  GEMMA3N_EXCLUSIVE_CONFIGURATION.md  GEMMA_MODEL_FIX_SUMMARY.md  IMPLEMENTATION_SUMMARY.md  MAJOR_FIXES_IMPLEMENTATION_SUMMARY.md  PYTHON_BACKEND_INTEGRATION.md  README.md  STAGE_3_COMPLETION_SUMMARY.md  STAGE_3_SUMMARY.md  STREAMING_FIXES_SUMMARY.md  STT_TTS_SETUP.md  TESTING_GUIDE.md  UI_FIXES_COMPREHENSIVE_SUMMARY.md  UI_FIXES_IMPLEMENTATION_SUMMARY.md  VOICE_FEATURES_TEST_GUIDE.md  VOSK_SETUP_GUIDE.md  b64_audio.txt  browser_test.js  chat_sessions.py  complete_all_stages.py  convert_audio.py  debug_streaming.html  fix_imports.py  hardware_detection.py  index.html  minimal_backend.py  package-lock.json  package.json  python_backend_server.py  requirements.txt  requirements_vosk.txt  run_app.bat  (+68 more)
chats/: chat_01c6805abf28.json  chat_0daecf828a30.json  chat_1c79ff5538f2.json  chat_2a02ce7d76cd.json  chat_2bf79714f1df.json  chat_360e7b208308.json  chat_38eab2a0473c.json  chat_39a0e4455165.json  chat_5c5da01aa065.json  chat_5e011dc760e7.json  chat_605bfe96a64e.json  chat_60bbae365640.json  chat_62eb763f8c36.json  chat_6f552412e457.json  chat_84d1c85258c7.json  chat_86d37f5753e3.json  chat_8f5cc21c8e7f.json  chat_9c6f0f23fa83.json  chat_a389477db246.json  chat_a3c8ff7a2b00.json  chat_f0865a567eed.json
docs/: PLUGIN_TAURI_INTEGRATION.md
src/: App.tsx  vite-env.d.ts
src-tauri/: Cargo.toml  icon.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  dashboard_api.rs  lib.rs  llm.rs  main.rs  python_backend.rs  stt_tts.rs  web_integration.rs  windows_integration.rs
src/components/: AudioDiagnosticPanel.tsx  BrowserModeBlocker.tsx  CapabilitiesStatusPanel.tsx  ChatInterface.tsx  ConnectionStatusIndicator.tsx  ContextWindowIndicator.tsx  DebugPanel.tsx  EmbeddedBrowser.tsx  EnhancedChatInterface.tsx  EnhancedPluginPanel.tsx  EnhancedSidebar.tsx  EnhancedVoiceModal.tsx  ErrorBoundary.tsx  ErrorStates.tsx  HardwareStatusBadge.tsx  InputArea.tsx  LoadingIndicator.tsx  LoadingStates.tsx  MessageBubble.tsx  ModelSelector.tsx  ModelStatusBadge.tsx  PluginPanel.tsx  RealtimeConversationModal.tsx  RealtimeVoiceConversation.tsx  RealtimeVoiceModal.tsx  RealtimeVoiceModal_improved.tsx  Sidebar.tsx  StartupDiagnostic.tsx  StartupVerification.tsx  StatusBar.tsx  SystemPromptPanel.tsx  SystemSettingsPanel.tsx  ThinkingIndicator.tsx  ToolDashboard.tsx  VoiceChat.tsx  VoiceRecordingModal.tsx
src/components/dashboards/: BrowserDashboard.tsx  NotesDashboard.tsx  (+2 more)
src/hooks/: useAdaptiveStreaming.ts  useEnhancedStreaming.ts  useEnhancedVoice.ts  useFeatureFlags.ts  useLLM.ts  useMicrophonePermissions.ts  usePythonBackendLLM.ts  usePythonBackendStreaming.ts  useRealtimeSTT.ts  useStreamingLLM.ts  useStreamingTTS.ts  useTTS.ts  useTauriStreaming.ts
src/services/: geminiApi.ts  toolMetricsService.ts
src/stores/: chatStore.ts  enhancedChatStore.ts  settingsStore.ts
src/styles/: animations.css  globals.css
src/types/: index.ts
src/utils/: accessibility.ts  audioUtils.ts  hardwareOptimization.ts  logger.ts  microphonePermissions.ts  modelHealth.ts  privacyManager.ts  tauriDebug.ts  tauriDetection.ts  voicePipelineDebug.ts
stt/: stt.py  test_stt.py
(+16 files in other folders)
