[package]
name = "privacy-ai-assistant"
version = "0.1.0"
authors = ["Narisetti Chaitanya Naidu <chaitanyanaidunarisetti@gmail.com.com>"]
edition = "2021"
license = "MIT"

[lib]
name = "privacy_ai_assistant_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# Use supported versions
[build-dependencies]
tauri-build = { version = "2.0", features = [], default-features = false }

[dependencies]
tauri = { version = "2.0", features = [] }
tauri-plugin-shell = "2.0"
tauri-plugin-http = "2.0"
tauri-plugin-store = "2.0"
tauri-plugin-fs = "2.0"
tauri-plugin-dialog = "2.0"
tauri-plugin-os = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
log = "0.4"
env_logger = "0.10"
base64 = "0.22"
futures-util = "0.3"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.11", features = ["json", "stream"] }
bytes = "1.0"
thiserror = "1.0"
urlencoding = "2.1"
sysinfo = "0.30"
# STT/TTS dependencies
cpal = "0.15"
hound = "3.5"
rodio = "0.17"
byteorder = "1.5"
# JWT and web integration dependencies
jsonwebtoken = "9.2"
uuid = { version = "1.0", features = ["v4"] }
scraper = "0.18"
url = "2.4"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]

[package.metadata.tauri]
bundle.identifier = "com.privacy.ai.assistant"
windows.webviewInstallMode = "downloadBootstrapper"
